Update star-rating template with improved star display

--- a/assets/javascripts/discourse/components/star-rating.hbs
+++ b/assets/javascripts/discourse/components/star-rating.hbs
@@ -1,16 +1,11 @@
-<div class="star-rating-container">
+<div class="rating-stars">
   {{#each this.stars as |star|}}
     <span 
-      class="star {{if (lte star this.displayRating) 'filled'}}"
+      class="star {{if star.filled "filled"}}" 
       role="button"
-      {{on "mouseenter" (fn this.setHoverRating star)}}
-      {{on "mouseleave" this.clearHoverRating}}
-      {{on "click" (fn this.setRating star)}}>
-      {{#if (lte star this.displayRating)}}
-        {{d-icon "star"}}
-      {{else}}
-        {{d-icon "far-star"}}
-      {{/if}}
+      {{on "click" (fn this.setRating star.value)}}
+    >
+      {{#if star.filled}}★{{else}}☆{{/if}}
     </span>
   {{/each}}
 </div>
