--- a/assets/stylesheets/ratings.scss
+++ b/assets/stylesheets/ratings.scss
@@ -1,5 +1,35 @@
 table.topic-list {
-  // Hide unwanted columns
+  td.posters,
+  td.posts,
+  td.activity {
+    width: 100px !important;
+    text-align: center !important;
+    display: table-cell !important;
+    vertical-align: middle !important;
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+    
+    > * {
+      display: none !important;
+    }
+  }
+
+  th.posters,
+  th.posts,
+  th.activity {
+    width: 100px !important;
+    text-align: center !important;
+    background-color: white !important;
+    border-bottom: 2px solid #e9e9e9 !important;
+    font-size: 14px !important;
+    font-weight: bold !important;
+    color: #333 !important;
+
+    button {
+      display: none !important;
+    }
+  }
+
   th.views,
   td.views,
   th.replies,
@@ -7,65 +37,7 @@ table.topic-list {
     display: none !important;
   }
 
-  // Style rating columns
-  td.posters,
-  td.posts,
-  td.activity {
-    width: 100px !important;
-    text-align: center !important;
-    vertical-align: middle !important;
-    padding: 15px 5px !important;
-  }
-
-  // Headers
-  th.posters,
-  th.posts,
-  th.activity {
-    width: 100px !important;
-    text-align: center !important;
-    font-size: 14px !important;
-    font-weight: bold !important;
-  }
-
   th.posters:after { content: "Importance" !important; }
   th.posts:after { content: "Feasibility" !important; }
   th.activity:after { content: "Sort" !important; }
-
-  // Star styling
-  .rating-stars {
-    display: inline-flex !important;
-    gap: 2px;
-    
-    .star {
-      cursor: pointer;
-      color: #ccc;
-      font-size: 20px;
-      
-      &.filled {
-        color: #fa6c00;
-      }
-      
-      &:hover {
-        color: #fa6c00;
-      }
-    }
-  }
-
-  // Sort options
-  .sort-options {
-    display: flex !important;
-    flex-direction: column !important;
-    gap: 4px;
-    
-    .sort-radio {
-      display: flex !important;
-      align-items: center !important;
-      justify-content: center !important;
-      gap: 4px;
-      
-      label {
-        font-size: 12px;
-      }
-    }
-  }
 }
