--- a/assets/stylesheets/ratings.scss
+++ b/assets/stylesheets/ratings.scss
@@ -1,43 +1,1 @@
-table.topic-list {
-  td.posters,
-  td.posts,
-  td.activity {
-    width: 100px !important;
-    text-align: center !important;
-    display: table-cell !important;
-    vertical-align: middle !important;
-    padding-top: 15px !important;
-    padding-bottom: 15px !important;
-    
-    > * {
-      display: none !important;
-    }
-  }
-
-  th.posters,
-  th.posts,
-  th.activity {
-    width: 100px !important;
-    text-align: center !important;
-    background-color: white !important;
-    border-bottom: 2px solid #e9e9e9 !important;
-    font-size: 14px !important;
-    font-weight: bold !important;
-    color: #333 !important;
-
-    button {
-      display: none !important;
-    }
-  }
-
-  th.views,
-  td.views,
-  th.replies,
-  td.replies {
-    display: none !important;
-  }
-
-  th.posters:after { content: "Importance" !important; }
-  th.posts:after { content: "Feasibility" !important; }
-  th.activity:after { content: "Sort" !important; }
-}
+[... content as shown above ...]
