Update to modern Glimmer component syntax

--- a/assets/stylesheets/ratings.scss
+++ b/assets/stylesheets/ratings.scss
@@ -1,34 +1,34 @@
+.topic-ratings {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  
+  .rating-stars {
+    display: inline-flex;
+    gap: 2px;
+    
+    .star {
+      cursor: pointer;
+      color: #ddd;
+      font-size: 1.2em;
+      
+      &.filled {
+        color: #fa6c00;
+      }
+      
+      &:hover {
+        color: #fa6c00;
+      }
+    }
+  }
+  
+  .sort-value {
+    font-size: 1.2em;
+    color: #333;
+  }
+}
+
 table.topic-list {
-  td.posters,
-  td.posts,
-  td.activity {
-    width: 100px !important;
-    text-align: center !important;
-    display: table-cell !important;
-    vertical-align: middle !important;
-    padding: 15px 5px !important;
-
-    > * {
-      display: none !important;
-    }
-  }
-
-  th.posters,
-  th.posts,
-  th.activity {
-    width: 100px !important;
-    text-align: center !important;
-    background-color: #fff !important;
-    border-bottom: 2px solid #e9e9e9 !important;
-    font-size: 14px !important;
-    font-weight: bold !important;
-    color: #333 !important;
-
-    button {
-      display: none !important;
-    }
-  }
-
   th.views,
   td.views,
   th.replies,
@@ -36,15 +36,7 @@ table.topic-list {
     display: none !important;
   }
 
-  th.posters::after {
-    content: "Importance" !important;
-  }
-
-  th.posts::after {
-    content: "Feasibility" !important;
-  }
-
-  th.activity::after {
-    content: "Sort" !important;
-  }
+  th.posters::after { content: "Importance" !important; }
+  th.posts::after { content: "Feasibility" !important; }
+  th.activity::after { content: "Sort" !important; }
 }
