--- a/assets/stylesheets/ratings.scss
+++ b/assets/stylesheets/ratings.scss
@@ -1,3 +1,4 @@
+// sass-lint:disable no-important
 table.topic-list {
   td.posters,
   td.posts,
@@ -18,11 +19,11 @@ table.topic-list {
   th.activity {
     width: 100px !important;
     text-align: center !important;
-    background-color: #fff !important;
-    border-bottom: 2px solid #e9e9e9 !important;
-    font-size: 14px !important;
+    background-color: $secondary !important;
+    border-bottom: 2px solid $primary-low !important;
+    font-size: $font-up-1 !important;
     font-weight: bold !important;
-    color: #333 !important;
+    color: $primary !important;
 
     button {
       display: none !important;
@@ -51,8 +52,8 @@ table.topic-list {
   td.posters::after,
   td.posts::after {
     content: "★★★★★" !important;
-    color: #ccc !important;
-    font-size: 20px !important;
+    color: var(--primary-low-mid) !important;
+    font-size: $font-up-2 !important;
     letter-spacing: 2px !important;
     display: block !important;
     text-align: center !important;
